apps/omada/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  labels:
    app: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      hostNetwork: true
      containers:
      - name: omada-controller
        image: mbentley/omada-controller:latest
        resources:
          requests:
            cpu: 250m
            memory: 2Gi
          limits:
            cpu: "1"
            memory: 4Gi
        volumeMounts:
        - name: omada-storage
          mountPath: /opt/tplink/EAPController/data
      volumes:
      - name: omada-storage
        persistentVolumeClaim:
          claimName: omada-data-pvc
