apps/omada/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-internal-service
  namespace: omada
spec:
  selector:
    app: omada-controller
  ports:
  - name: https-portal
    port: 8043
    targetPort: 8043
